# hypothesis-talk

./: LICENSE.txt  Readme.md  pyproject.toml
custom_sort/: my_sort.py  my_sort_broken.py  test_examples.py  test_properties.py
hypothesis_magic/: test_hypothesis_behavior.py
