[tool.poetry]
name = "hypothesis-talk"
version = "0.1.0"
description = ""
authors = ["skalkowski <sebastian.kalkowski@natif.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
hypothesis = "^6.54.3"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
